clear unused libs and process.env
